...
                                calculateSize(context, 2),
                              ),
                            ),
                          ],
                        ),
                        child: ElevatedButton(
                          key: const Key("addButton"),
                          onPressed: () {
                            Navigator.push(
                              context,
                              MaterialPageRoute(
                                builder: (context) => PersonPage(
                                  factoryName: factoryName,
...
                            decoration: BoxDecoration(
                              borderRadius: BorderRadius.circular(24),
                            ),
                            child: Transform.scale(
                              scale: 1,
                              child: ElevatedButton(
                                key: const Key("editButton"),
                                onPressed: () {
                                  updateAllValues(
                                    double.parse(_pressureController.text),
                                    double.parse(_flowController.text),
                                    double.parse(_levelController.text),
                                    double.parse(_powerController.text),
...
                              ),
                              child: Row(
                                mainAxisSize: MainAxisSize.max,
                                children: [
                                  Expanded(
                                    child: TextField(
                                      key: const Key("typePressure"),
                                      style: TextStyle(
                                        fontSize: calculateSize(context, 16),
                                      ),
                                      controller: _pressureController,
                                      keyboardType: TextInputType.phone,
                                      decoration: InputDecoration(
...
                              ),
                              child: Row(
                                mainAxisSize: MainAxisSize.max,
                                children: [
                                  Expanded(
                                    child: TextField(
                                      key: const Key("typeFlow"),
                                      style: TextStyle(
                                        fontSize: calculateSize(context, 16),
                                      ),
                                      controller: _flowController,
                                      keyboardType: TextInputType.phone,
                                      decoration: InputDecoration(
...
                              ),
                              child: Row(
                                mainAxisSize: MainAxisSize.max,
                                children: [
                                  Expanded(
                                    child: TextField(
                                      key: const Key("typeLevel"),
                                      style: TextStyle(
                                        fontSize: calculateSize(context, 16),
                                      ),
                                      controller: _levelController,
                                      keyboardType: TextInputType.phone,
                                      decoration: InputDecoration(
...
                              ),
                              child: Row(
                                mainAxisSize: MainAxisSize.max,
                                children: [
                                  Expanded(
                                    child: TextField(
                                      key: const Key("typePower"),
                                      style: TextStyle(
                                        fontSize: calculateSize(context, 16),
                                      ),
                                      controller: _powerController,
                                      keyboardType: TextInputType.phone,
                                      decoration: InputDecoration(
...
                child: Padding(
                  padding: const EdgeInsets.all(5),
                  child: Row(
                    mainAxisSize: MainAxisSize.max,
                    children: <Widget>[
                      GestureDetector(
                        key: const Key("factory1"),
                        onTap: () {
                          setState(() {
                            appBarTitle = 'Factory 1';
                            selectedFactory =
                                'Factory 1'; // Update selected factory
                          });
...
                              )
                            ],
                          ),
                        ),
                      ),
                      GestureDetector(
                        key: const Key("factory2"),
                        onTap: () {
                          setState(() {
                            appBarTitle = 'Factory 2';
                            selectedFactory =
                                'Factory 2'; // Update selected factory
                          });
...
                              )
                            ],
                          ),
                        ),
                      ),
                      GestureDetector(
                        key: const Key("factory3"),
                        onTap: () {
                          setState(() {
                            appBarTitle = 'Factory 3';
                            selectedFactory =
                                'Factory 3'; // Update selected factory
                          });
...
        items: [
          BottomNavigationBarItem(
            label: 'Person',
            icon: Icon(
              Icons.person,
              size: calculateSize(context, 20),
              key: const Key("personIcon"),
            ),
          ),
          BottomNavigationBarItem(
            label: 'Home',
            icon: Icon(
              Icons.home_outlined,
              size: calculateSize(context, 20),
              key: const Key("homeIcon"),
            ),
          ),
          BottomNavigationBarItem(
            label: 'Setting',
            icon: Icon(
              Icons.settings,
              size: calculateSize(context, 20),
              key: const Key("settingIcon"),
            ),
          ),
        ],
        currentIndex: currentIndex,
        onTap: (int index) {
          setState(() {
...
