...
                                          Expanded(
                                            child: Padding(
                                              padding:
                                                  const EdgeInsets.fromLTRB(
                                                      30, 0, 30, 0),
                                              child: TextField(
                                                key: const Key("typeOTP"),
                                                style: TextStyle(
                                                  fontSize: calculateSize(
                                                      context, 16),
                                                ),
                                                keyboardType:
                                                    TextInputType.phone,
...
                                    Padding(
                                      padding: EdgeInsets.fromLTRB(
                                          0, calculateSize(context, 14), 0, 10),
                                      child: Transform.scale(
                                        scale: calculateSize(context, 1),
                                        child: ElevatedButton(
                                          key: const Key("activateButton"),
                                          onPressed: () {
                                            Navigator.push(
                                              context,
                                              MaterialPageRoute(
                                                builder: (context) =>
                                                    const HomePage(),
...
