...
                                          Expanded(
                                            child: Padding(
                                              padding:
                                                  const EdgeInsets.fromLTRB(
                                                      30, 0, 20, 0),
                                              child: TextField(
                                                key: const Key("mainPhone"),
                                                style: TextStyle(
                                                  fontSize: calculateSize(
                                                      context, 16),
                                                ),
                                                keyboardType:
                                                    TextInputType.phone,
...
                                      ),
                                    ),
                                    SizedBox(
                                      width: calculateWidth(context, 200),
                                      height: calculateHeight(context, 40),
                                      child: ElevatedButton(
                                        key: const Key("getOTPButton"),
                                        onPressed: () {
                                          Navigator.push(
                                            context,
                                            MaterialPageRoute(
                                              builder: (context) =>
                                                  const ActivationPages(),
...
